--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build": "echo 'Skipping build on server'",
     "build:local": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
