Revert "Build: Update production bundle with mobile-friendly and rounded UI changes"
This reverts commit 74424d35456aad867df01ac5facd7d6a10b4866d.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "echo 'Skipping build on server'",
     "build:local": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
